...
                                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UzE-db-MBv">
                                                <rect key="frame" x="0.0" y="38.5" width="398" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="RegisterViewController.UserNameTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eSv-RD-Cbg">
                                                <rect key="frame" x="0.0" y="129" width="398" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="RegisterViewController.PhoneNumberTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                <rect key="frame" x="0.0" y="219.5" width="398" height="50"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="RegisterViewController.PasswordTextfield">
                                                    <accessibilityTraits key="traits" notEnabled="YES" allowsDirectInteraction="YES"/>
                                                    <bool key="isElement" value="NO"/>
...
                                                <rect key="frame" x="0.0" y="326" width="398" height="50"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="RegisterViewController.Password2Textfield">
                                                    <bool key="isElement" value="NO"/>
                                                </accessibility>
...
                                        <rect key="frame" x="0.0" y="415" width="398" height="30"/>
                                        <color key="backgroundColor" red="0.80613583330000005" green="0.90151077509999999" blue="0.73742300270000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RegisterVC.RegisterButton"/>
                                        <state key="normal" title="Register">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpa-cQ-5Ql">
                                <rect key="frame" x="0.0" y="699" width="414" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="RegisterVC.LoginButton"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Login In">
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9dR-Sg-hhC">
                                        <rect key="frame" x="0.0" y="45.5" width="398" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LoginVC.UsernameTextfield"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="150" width="398" height="50"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LoginVC.PasswordTextfield"/>
                                        <constraints>
                                            <constraint firstAttribute="height" priority="999" constant="50" id="Dbn-cE-rHZ"/>
...
                                <rect key="frame" x="8" y="548" width="398" height="30"/>
                                <color key="backgroundColor" red="0.80613583330000005" green="0.90151077509999999" blue="0.73742300270000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginVC.LoginButton"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="0.0" y="667" width="414" height="29"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginVC.RegisterButton"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Register">
...
